💄(keyboard) better handling of focus ring
some focus rings were shown even when we only used the mouse. this
globally fixes that

--- a/src/frontend/src/styles/index.css
+++ b/src/frontend/src/styles/index.css
@@ -6,3 +6,15 @@ body,
 #root {
   height: 100%;
 }
+
+* {
+  outline: none;
+}
+
+[data-rac][data-focus-visible],
+:is(a, button, input, select, textarea):not([data-rac]):focus-visible {
+  outline: 2px solid black;
+  outline-offset: 1px;
+  outline-color: Highlight;
+  outline-color: -webkit-focus-ring-color;
+}
