📱(front) improve control bar responsive
We want the bottom bar to stay at the center of the screen.

Co-authored-by: Nathan Vasse <nathan.vasse@gmail.com>

--- a/src/frontend/src/styles/index.css
+++ b/src/frontend/src/styles/index.css
@@ -25,3 +25,7 @@ body,
     transition: none !important;
   }
 }
+
+body:has(.lk-video-conference) #crisp-chatbox > div > a {
+  display: none !important;
+}
